feat(packages): complete Task 3 – PackageCredit & Agenda integration
Implements full session-package management with accounting integrity,
state machine, expiry logic and race-condition protection.

Core features:
- PackageCredit lifecycle: ACTIVE → COMPLETED → EXPIRED
- Session deduction on Booking COMPLETED transition (consume/restore)
- Block duplicate ACTIVE package per (customerEmail, serviceOption)
- Expiry auto-set to purchasedAt + 24 months via @PrePersist
- FIFO selection when multiple ACTIVE packages exist (legacy safety)
- Historic records preserved – no hard deletes on PackageCredit

Safety & concurrency:
- PESSIMISTIC_WRITE lock on Booking in updateBookingStatus
  to prevent double-consume on parallel requests
- PESSIMISTIC_WRITE lock on PackageCredit in consume/restore methods
- All mutating operations wrapped in @Transactional
- Partial unique index ux_pkg_active_unique (email, service_option_id)
  WHERE status = 'ACTIVE' as DB-level last line of defense

Expiry grace period (intentional business rule):
- EXPIRED package can still be consumed if booking.createdAt < expiryDate
- Contract is considered closed at booking creation time, not appointment time
- Documented in source + covered by TC-EXPIRED-GRACE / TC-EXPIRED-NO-GRACE

Migrations:
- V9: expiryDate backfill + NOT NULL, scheduler field
- V10: drop legacy UNIQUE on bookings.package_credit_id (IF EXISTS, idempotent)

Tests added: TC-1b, TC-5b, TC-EXPIRED-GRACE, TC-EXPIRED-NO-GRACE
All PackageCreditServiceTest + BookingServiceTest pass.